made it possible to have multiple object files, be dependent on each other, added a basics.js file, optimized stuff yeah - kinda awesome now
